[package]
name = "riscv-interpreter"
version = "0.1.0"
authors = ["Rosie Baish <rosie.baish@192-168.co.uk>"]
edition = "2018"
build = "build/main.rs"
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[build-dependencies]
phf_codegen = "0.10.0"
tera = { version = "1", default-features = false }
which = "4.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies]
wasm-bindgen = "0.2.63"
web-sys = { version = "0.3.39", features = ['Window', 'Document', 'Element', 'HtmlTextAreaElement'] }
phf = { version = "0.10", features = ["macros"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
